# kcc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog.md  README.md  not-support.md
.github/codeql/: codeql_config.yml
.github/workflows/: build.yml  clang_tidy.yml  codeql.yml  coverage.yml  install.yml  main.yml  release.yml  sanitizer.yml  valgrind.yml
cmake/: AddCXXCompilerFlag.cmake  AddCompilerFlag.cmake  CMakeUninstall.cmake.in  Check.cmake  ClangTidy.cmake  CompilerOptions.cmake  Coverage.cmake  Format.cmake  Install.cmake  LTO.cmake  Options.cmake  Sanitizers.cmake  Utility.cmake  Valgrind.cmake  Version.cmake  compiler-options.cmake
example/: chinese.c
include/: ast.h  calc.h  code_gen.h  debug_info.h  dict.h  error.h  json_gen.h  lex.h  llvm_common.h  location.h  memory_pool.h  parse.h  scope.h  token.h  type.h  util.h  version.h
script/: build.sh
scripts/: build-install.sh  install-system.sh  install.sh
src/: ast.cpp  ast.h  calc.cpp  calc.h  code_gen.cpp  code_gen.h  code_gen_expr.cpp  code_gen_stmt.cpp  cpp.cpp  cpp.h  debug_info.cpp  debug_info.h  dict.cpp  dict.h  encoding.cpp  encoding.h  error.cpp  error.h  json_gen.cpp  json_gen.h  lex.cpp  lex.h  link.cpp  link.h  llvm_common.cpp  llvm_common.h  location.cpp  main.cpp  memory_pool.h  obj_gen.cpp  obj_gen.h  opt.cpp  opt.h  parse.cpp  parse.h  parse_decl.cpp  parse_expr.cpp  parse_init.cpp  parse_stmt.cpp  scope.cpp  (+7 more)
test/: CMakeLists.txt
tests/usual/: float.c  varargs.c
tool/: CMakeLists.txt
